--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,10 @@
 @theme {
   --font-poppins: "Poppins", sans-serif;
 }
+
+.box:hover{
+  @apply bg-[#ee0000] duration-500 ease-in-out cursor-pointer 
+}
+.box:hover .item{
+  @apply text-white duration-300 ease-in-out 
+}
