--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,16 @@
 .box:hover .item{
   @apply text-white duration-300 ease-in-out 
 }
+
+.footer li a{
+  @apply text-white font-medium leading-8.75 text-base font-poppins 
+}
+.footer li a:hover{
+  @apply text-[#ee0000]  duration-300 ease-in-out
+}
+.icons .socialr{
+  @apply cursor-pointer
+}
+.icons .social:hover{
+  @apply text-[#ee0000] cursor-pointer scale-130 duration-300 ease-in-out rotate-20
+}
